// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root DropdownArrow-medium"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root DropdownArrow-medium"
        />
      </div>
      <div
        class="Dropdown-popper"
        role="tooltip"
        style="position: absolute;"
        x-placement="bottom-end"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation2 Dropdown-content"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <ul
            class="MuiList-root"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item1
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item2
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item3
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render menu with focus 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Dropdown-root"
    >
      <div
        class="Dropdown-anchor"
      >
        Open Dropdown 
        <span
          class="DropdownArrow-root DropdownArrow-medium"
        />
      </div>
      <div
        class="Dropdown-popper"
        role="tooltip"
        style="position: absolute; transform: translate3d(NaNpx, NaNpx, 0); top: 0px; left: 0px; will-change: transform;"
        x-placement="bottom-end"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation2 Dropdown-content"
          style="opacity: 1; transform: none; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <ul
            class="MuiList-root"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-focusVisible Mui-focusVisible"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item1
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item2
              </span>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <span
                class="MenuItem-stringContent"
              >
                Item3
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
